sumo/tests/sumo/output/e3/errors/freq_missing/detector.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 09/05/16 12:24:41 by SUMO Version dev-SVN-r21410
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
        <additional-files value="input_additional.add.xml"/>
    </input>

    <time>
        <begin value="0"/>
        <end value="1000"/>
    </time>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<e3Detector xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/det_e3_file.xsd">
</e3Detector>
